--- a/DockerFile
+++ b/DockerFile
@@ -2,7 +2,7 @@
 FROM python:2.7
 
 ADD server.py /
-
+RUN pip -V
 RUN virtualenv venv
 RUN source venv/bin/activate
 RUN pip install flask flask-jsonpify flask-sqlalchemy flask-restful
