--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,7 @@ install:
   - source venv/bin/activate
   - pip install flask flask-jsonpify flask-sqlalchemy flask-restful
   - pip freeze
+  - pip install pytest
 # command to run tests
 script:
   - pytest # or py.test for Python versions 3.5 and below
