--- a/DockerFile
+++ b/DockerFile
@@ -1,5 +1,5 @@
 
-FROM python:3.3
+FROM python:2.7
 
 ADD server.py /
 RUN pip -V
@@ -10,6 +10,8 @@ RUN pip install -r requirements.txt
 COPY requirements.txt /opt/app/requirements.txt
 WORKDIR /opt/app
 RUN pip install -r requirements.txt
+RUN pip install pytest
+RUN pytest
 COPY . /opt/app
 
 CMD [ "python", "./server.py" ]
