--- a/.travis.yml
+++ b/.travis.yml
@@ -17,5 +17,5 @@ install:
   - pip freeze
   - pip install pytest
 # command to run tests
-script:
-  - pytest # or py.test for Python versions 3.5 and below
+#script:
+#  - pytest # or py.test for Python versions 3.5 and below
