--- a/DockerFile
+++ b/DockerFile
@@ -10,8 +10,8 @@ RUN pip install -r requirements.txt
 COPY requirements.txt /opt/app/requirements.txt
 WORKDIR /opt/app
 RUN pip install -r requirements.txt
-RUN pip install pytest
-RUN pytest
+#RUN pip install pytest
+#RUN pytest
 COPY . /opt/app
 
 CMD [ "python", "./server.py" ]
