--- a/.travis.yml
+++ b/.travis.yml
@@ -15,5 +15,5 @@ install:
   # - pip install pytest
 # command to run tests
 script:
-  - python server.py runserver
+  - python  -m py_compile server.py
 #  - pytest # or py.test for Python versions 3.5 and below
